--- a/table_style.css
+++ b/table_style.css
@@ -17,6 +17,7 @@
   
   .table-sortable .th-sort-asc,
   .table-sortable .th-sort-desc {
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(233, 218, 10, 0.582);
+    color: black;
   }
   
