--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@
 
   }
 
+  .flag{
+    float: right;
+    margin-right: 10px;
+  }
+
   thead input {
     width: 100%;
 }
@@ -39,10 +44,25 @@
     padding: 16px;
   }
   
+  /* Card view after header */
+  
+  * {
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  /* Float four columns side by side */
   .column {
     float: left;
-    width: 33.33%;
+    width: 25%;
+    padding: 0 10px;
   }
+  
+  /* Remove extra left and right margins, due to padding in columns */
+  .row {margin: 0 -5px;}
   
   /* Clear floats after the columns */
   .row:after {
@@ -50,15 +70,21 @@
     display: table;
     clear: both;
   }
-
+  
+  /* Style the counter cards */
   .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px; /* 5px rounded corners */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+    padding: 16px;
+    text-align: center;
+    background-color: #1670e68c;
   }
   
-  /* Add rounded corners to the top left and the top right corner of the image */
-  img {
-    border-radius: 5px 5px 0 0;
+  /* Responsive columns - one column layout (vertical) on small screens */
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
   }
   
