--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@
   
   body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(255, 255, 255);
   }
   
   /* Float four columns side by side */
@@ -73,13 +74,28 @@
     display: table;
     clear: both;
   }
+
+  /*Footer Style */
+  .footer {
+    text-align:center;
+    padding:5px;
+    background:#a5a5a5;
+    color:#ffffff;
+    font-size: 14px;
+    width: 100%;
+    bottom: 0;
+    }
   
   /* Style the counter cards */
   .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
     padding: 16px;
-    text-align: center;
-    background-color: #1670e68c;
+    text-align: left;
+    background-color: #06418fc7;
+    font-size:12px;
+    line-height: 18px;
+    color:#fff;
+    height:230px;
   }
   
   /* Responsive columns - one column layout (vertical) on small screens */
